# kevin-financial-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  components.json  docker-compose.yml  main.py  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tailwind.config.ts  tsconfig.json  vite.config.mjs
.github/workflows/: ci.yml
app/: main.py
app/agent_graph/: graph.py  (+4 more)
docs/: api.md  architecture.md  data_flow.md  production_governance.md  quickstart.md  rag_evaluation.md  tool_registry.md
legacy/: agent_pipeline.py  agent_service.py  api_agent.py  api_audit.py  api_macro.py  api_news.py  api_price.py  api_runs.py  api_screener.py  api_smart_money.py  api_tech.py
scripts/: build.ps1  check_secrets.py  render_pdf.mjs  verify.ps1  verify.py
test-results/: .last-run.json
tests/: __init__.py  conftest.py  test_agent_graph_quality.py  test_agent_graph_state.py  test_backtest_service.py  test_controlled_agents.py  test_intent_parsing.py  test_knowledge_rag.py  test_langgraph_financial_agent.py  test_llm_client.py  test_payload_parsing.py  test_pdf_export_service.py  test_production_hardening.py  test_profile_and_audit.py  test_profile_api.py  test_profile_memory.py  test_profile_repository.py  test_report_builder.py  test_report_outputs.py  test_scoring.py  test_screener_limits.py  test_sec_audit.py  test_secret_scan.py  test_tool_registry.py  test_yfinance_proxy_router.py
web/: index.html
(+163 files in other folders)
